exports[`prefer-number-properties > invalid(1): const foo = {[NaN]: 1} 1`] = `

Options:
- checkNaN: true

Code:
  1 | const foo = {[NaN]: 1}

`;

exports[`prefer-number-properties > invalid(1): const foo = {[NaN]: 1} 2`] = `

Message:
> 1 | const foo = {[NaN]: 1}
    |               ^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | const foo = {[Number.NaN]: 1}

`;

exports[`prefer-number-properties > invalid(1): isNaN(10); 1`] = `

  1 | isNaN(10);

`;

exports[`prefer-number-properties > invalid(1): isNaN(10); 2`] = `

Message:
> 1 | isNaN(10);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Output:
  1 | Number.isNaN(10);

`;

exports[`prefer-number-properties > invalid(10): const foo = 5;\nisNaN(foo); 1`] = `

  1 | const foo = 5;
  2 | isNaN(foo);

`;

exports[`prefer-number-properties > invalid(10): const foo = 5;\nisNaN(foo); 2`] = `

Message:
  1 | const foo = 5;
> 2 | isNaN(foo);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Output:
  1 | const foo = 5;
  2 | Number.isNaN(foo);

`;

exports[`prefer-number-properties > invalid(10): const foo = {Infinity}; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = {Infinity};

`;

exports[`prefer-number-properties > invalid(10): const foo = {Infinity}; 2`] = `

Message:
> 1 | const foo = {Infinity};
    |              ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | const foo = {Infinity: Number.POSITIVE_INFINITY};

`;

exports[`prefer-number-properties > invalid(11): const foo = {Infinity: Infinity}; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = {Infinity: Infinity};

`;

exports[`prefer-number-properties > invalid(11): const foo = {Infinity: Infinity}; 2`] = `

Message:
> 1 | const foo = {Infinity: Infinity};
    |                        ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | const foo = {Infinity: Number.POSITIVE_INFINITY};

`;

exports[`prefer-number-properties > invalid(11): function foo(bar: number) { return isNaN(bar); } 1`] = `

  1 | function foo(bar: number) { return isNaN(bar); }

`;

exports[`prefer-number-properties > invalid(11): function foo(bar: number) { return isNaN(bar); } 2`] = `

Message:
> 1 | function foo(bar: number) { return isNaN(bar); }
    |                                    ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Output:
  1 | function foo(bar: number) { return Number.isNaN(bar); }

`;

exports[`prefer-number-properties > invalid(12): const foo = {[Infinity]: -Infinity}; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = {[Infinity]: -Infinity};

`;

exports[`prefer-number-properties > invalid(12): const foo = {[Infinity]: -Infinity}; 2`] = `

Message:
> 1 | const foo = {[Infinity]: -Infinity};
    |               ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | const foo = {[Number.POSITIVE_INFINITY]: -Infinity};

`;

exports[`prefer-number-properties > invalid(12): const foo = {[Infinity]: -Infinity}; 3`] = `

Message:
> 1 | const foo = {[Infinity]: -Infinity};
    |                          ^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

Output:
  1 | const foo = {[Infinity]: Number.NEGATIVE_INFINITY};

`;

exports[`prefer-number-properties > invalid(12): isNaN(foo as number); 1`] = `

  1 | isNaN(foo as number);

`;

exports[`prefer-number-properties > invalid(12): isNaN(foo as number); 2`] = `

Message:
> 1 | isNaN(foo as number);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Output:
  1 | Number.isNaN(foo as number);

`;

exports[`prefer-number-properties > invalid(13): const foo = {[-Infinity]: Infinity}; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = {[-Infinity]: Infinity};

`;

exports[`prefer-number-properties > invalid(13): const foo = {[-Infinity]: Infinity}; 2`] = `

Message:
> 1 | const foo = {[-Infinity]: Infinity};
    |               ^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

Output:
  1 | const foo = {[Number.NEGATIVE_INFINITY]: Infinity};

`;

exports[`prefer-number-properties > invalid(13): const foo = {[-Infinity]: Infinity}; 3`] = `

Message:
> 1 | const foo = {[-Infinity]: Infinity};
    |                           ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | const foo = {[-Infinity]: Number.POSITIVE_INFINITY};

`;

exports[`prefer-number-properties > invalid(13): isNaN(foo satisfies number); 1`] = `

  1 | isNaN(foo satisfies number);

`;

exports[`prefer-number-properties > invalid(13): isNaN(foo satisfies number); 2`] = `

Message:
> 1 | isNaN(foo satisfies number);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Output:
  1 | Number.isNaN(foo satisfies number);

`;

exports[`prefer-number-properties > invalid(14): const foo = {Infinity: -Infinity}; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = {Infinity: -Infinity};

`;

exports[`prefer-number-properties > invalid(14): const foo = {Infinity: -Infinity}; 2`] = `

Message:
> 1 | const foo = {Infinity: -Infinity};
    |                        ^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

Output:
  1 | const foo = {Infinity: Number.NEGATIVE_INFINITY};

`;

exports[`prefer-number-properties > invalid(14): isNaN(<number>foo); 1`] = `

  1 | isNaN(<number>foo);

`;

exports[`prefer-number-properties > invalid(14): isNaN(<number>foo); 2`] = `

Message:
> 1 | isNaN(<number>foo);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Output:
  1 | Number.isNaN(<number>foo);

`;

exports[`prefer-number-properties > invalid(15): const {foo = Infinity} = {}; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const {foo = Infinity} = {};

`;

exports[`prefer-number-properties > invalid(15): const {foo = Infinity} = {}; 2`] = `

Message:
> 1 | const {foo = Infinity} = {};
    |              ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | const {foo = Number.POSITIVE_INFINITY} = {};

`;

exports[`prefer-number-properties > invalid(15): function foo(bar: number) { return isNaN(bar!); } 1`] = `

  1 | function foo(bar: number) { return isNaN(bar!); }

`;

exports[`prefer-number-properties > invalid(15): function foo(bar: number) { return isNaN(bar!); } 2`] = `

Message:
> 1 | function foo(bar: number) { return isNaN(bar!); }
    |                                    ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Output:
  1 | function foo(bar: number) { return Number.isNaN(bar!); }

`;

exports[`prefer-number-properties > invalid(16): const foo: number = bar();\nisFinite(foo); 1`] = `

  1 | const foo: number = bar();
  2 | isFinite(foo);

`;

exports[`prefer-number-properties > invalid(16): const foo: number = bar();\nisFinite(foo); 2`] = `

Message:
  1 | const foo: number = bar();
> 2 | isFinite(foo);
    | ^^^^^^^^ Prefer \`Number.isFinite\` over \`isFinite\`.

Output:
  1 | const foo: number = bar();
  2 | Number.isFinite(foo);

`;

exports[`prefer-number-properties > invalid(16): const {foo = -Infinity} = {}; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const {foo = -Infinity} = {};

`;

exports[`prefer-number-properties > invalid(16): const {foo = -Infinity} = {}; 2`] = `

Message:
> 1 | const {foo = -Infinity} = {};
    |              ^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

Output:
  1 | const {foo = Number.NEGATIVE_INFINITY} = {};

`;

exports[`prefer-number-properties > invalid(17): const foo = Infinity.toString(); 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = Infinity.toString();

`;

exports[`prefer-number-properties > invalid(17): const foo = Infinity.toString(); 2`] = `

Message:
> 1 | const foo = Infinity.toString();
    |             ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | const foo = Number.POSITIVE_INFINITY.toString();

`;

exports[`prefer-number-properties > invalid(17): isNaN(foo); 1`] = `

  1 | isNaN(foo);

`;

exports[`prefer-number-properties > invalid(17): isNaN(foo); 2`] = `

Message:
> 1 | isNaN(foo);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Suggestion 1/1: Replace \`isNaN\` with \`Number.isNaN\`.:
  1 | Number.isNaN(foo);

`;

exports[`prefer-number-properties > invalid(18): const foo = -Infinity.toString(); 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = -Infinity.toString();

`;

exports[`prefer-number-properties > invalid(18): const foo = -Infinity.toString(); 2`] = `

Message:
> 1 | const foo = -Infinity.toString();
    |              ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | const foo = -Number.POSITIVE_INFINITY.toString();

`;

exports[`prefer-number-properties > invalid(18): isNaN(foo()); 1`] = `

  1 | isNaN(foo());

`;

exports[`prefer-number-properties > invalid(18): isNaN(foo()); 2`] = `

Message:
> 1 | isNaN(foo());
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Suggestion 1/1: Replace \`isNaN\` with \`Number.isNaN\`.:
  1 | Number.isNaN(foo());

`;

exports[`prefer-number-properties > invalid(19): const foo = (-Infinity).toString(); 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = (-Infinity).toString();

`;

exports[`prefer-number-properties > invalid(19): const foo = (-Infinity).toString(); 2`] = `

Message:
> 1 | const foo = (-Infinity).toString();
    |              ^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

Output:
  1 | const foo = (Number.NEGATIVE_INFINITY).toString();

`;

exports[`prefer-number-properties > invalid(19): isNaN(foo + bar); 1`] = `

  1 | isNaN(foo + bar);

`;

exports[`prefer-number-properties > invalid(19): isNaN(foo + bar); 2`] = `

Message:
> 1 | isNaN(foo + bar);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Suggestion 1/1: Replace \`isNaN\` with \`Number.isNaN\`.:
  1 | Number.isNaN(foo + bar);

`;

exports[`prefer-number-properties > invalid(2): const foo = {[NaN]() {}} 1`] = `

Options:
- checkNaN: true

Code:
  1 | const foo = {[NaN]() {}}

`;

exports[`prefer-number-properties > invalid(2): const foo = {[NaN]() {}} 2`] = `

Message:
> 1 | const foo = {[NaN]() {}}
    |               ^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | const foo = {[Number.NaN]() {}}

`;

exports[`prefer-number-properties > invalid(2): isFinite(10); 1`] = `

  1 | isFinite(10);

`;

exports[`prefer-number-properties > invalid(2): isFinite(10); 2`] = `

Message:
> 1 | isFinite(10);
    | ^^^^^^^^ Prefer \`Number.isFinite\` over \`isFinite\`.

Output:
  1 | Number.isFinite(10);

`;

exports[`prefer-number-properties > invalid(20): const foo = +Infinity; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = +Infinity;

`;

exports[`prefer-number-properties > invalid(20): const foo = +Infinity; 2`] = `

Message:
> 1 | const foo = +Infinity;
    |              ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | const foo = +Number.POSITIVE_INFINITY;

`;

exports[`prefer-number-properties > invalid(20): isNaN(foo - bar); 1`] = `

  1 | isNaN(foo - bar);

`;

exports[`prefer-number-properties > invalid(20): isNaN(foo - bar); 2`] = `

Message:
> 1 | isNaN(foo - bar);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Suggestion 1/1: Replace \`isNaN\` with \`Number.isNaN\`.:
  1 | Number.isNaN(foo - bar);

`;

exports[`prefer-number-properties > invalid(21): const foo = +-Infinity; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = +-Infinity;

`;

exports[`prefer-number-properties > invalid(21): const foo = +-Infinity; 2`] = `

Message:
> 1 | const foo = +-Infinity;
    |              ^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

Output:
  1 | const foo = +Number.NEGATIVE_INFINITY;

`;

exports[`prefer-number-properties > invalid(21): isNaN(); 1`] = `

  1 | isNaN();

`;

exports[`prefer-number-properties > invalid(21): isNaN(); 2`] = `

Message:
> 1 | isNaN();
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Suggestion 1/1: Replace \`isNaN\` with \`Number.isNaN\`.:
  1 | Number.isNaN();

`;

exports[`prefer-number-properties > invalid(22): const foo = -Infinity; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = -Infinity;

`;

exports[`prefer-number-properties > invalid(22): const foo = -Infinity; 2`] = `

Message:
> 1 | const foo = -Infinity;
    |             ^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

Output:
  1 | const foo = Number.NEGATIVE_INFINITY;

`;

exports[`prefer-number-properties > invalid(22): isNaN(...foo); 1`] = `

  1 | isNaN(...foo);

`;

exports[`prefer-number-properties > invalid(22): isNaN(...foo); 2`] = `

Message:
> 1 | isNaN(...foo);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Suggestion 1/1: Replace \`isNaN\` with \`Number.isNaN\`.:
  1 | Number.isNaN(...foo);

`;

exports[`prefer-number-properties > invalid(23): [1].some(isNaN); 1`] = `

  1 | [1].some(isNaN);

`;

exports[`prefer-number-properties > invalid(23): [1].some(isNaN); 2`] = `

Message:
> 1 | [1].some(isNaN);
    |          ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Suggestion 1/1: Replace \`isNaN\` with \`Number.isNaN\`.:
  1 | [1].some(Number.isNaN);

`;

exports[`prefer-number-properties > invalid(23): const foo = -(-Infinity); 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = -(-Infinity);

`;

exports[`prefer-number-properties > invalid(23): const foo = -(-Infinity); 2`] = `

Message:
> 1 | const foo = -(-Infinity);
    |               ^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

Output:
  1 | const foo = -(Number.NEGATIVE_INFINITY);

`;

exports[`prefer-number-properties > invalid(24): const foo = 1 - Infinity; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = 1 - Infinity;

`;

exports[`prefer-number-properties > invalid(24): const foo = 1 - Infinity; 2`] = `

Message:
> 1 | const foo = 1 - Infinity;
    |                 ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | const foo = 1 - Number.POSITIVE_INFINITY;

`;

exports[`prefer-number-properties > invalid(24): isFinite(10n); 1`] = `

  1 | isFinite(10n);

`;

exports[`prefer-number-properties > invalid(24): isFinite(10n); 2`] = `

Message:
> 1 | isFinite(10n);
    | ^^^^^^^^ Prefer \`Number.isFinite\` over \`isFinite\`.

Suggestion 1/1: Replace \`isFinite\` with \`Number.isFinite\`.:
  1 | Number.isFinite(10n);

`;

exports[`prefer-number-properties > invalid(25): const foo = 1 - -Infinity; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = 1 - -Infinity;

`;

exports[`prefer-number-properties > invalid(25): const foo = 1 - -Infinity; 2`] = `

Message:
> 1 | const foo = 1 - -Infinity;
    |                 ^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

Output:
  1 | const foo = 1 - Number.NEGATIVE_INFINITY;

`;

exports[`prefer-number-properties > invalid(25): isNaN(foo as Number); 1`] = `

  1 | isNaN(foo as Number);

`;

exports[`prefer-number-properties > invalid(25): isNaN(foo as Number); 2`] = `

Message:
> 1 | isNaN(foo as Number);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Suggestion 1/1: Replace \`isNaN\` with \`Number.isNaN\`.:
  1 | Number.isNaN(foo as Number);

`;

exports[`prefer-number-properties > invalid(26): const foo: Number = bar();\nisFinite(foo); 1`] = `

  1 | const foo: Number = bar();
  2 | isFinite(foo);

`;

exports[`prefer-number-properties > invalid(26): const foo: Number = bar();\nisFinite(foo); 2`] = `

Message:
  1 | const foo: Number = bar();
> 2 | isFinite(foo);
    | ^^^^^^^^ Prefer \`Number.isFinite\` over \`isFinite\`.

Suggestion 1/1: Replace \`isFinite\` with \`Number.isFinite\`.:
  1 | const foo: Number = bar();
  2 | Number.isFinite(foo);

`;

exports[`prefer-number-properties > invalid(26): const isPositiveZero = value => value === 0 && 1 / value === Infinity; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const isPositiveZero = value => value === 0 && 1 / value === Infinity;

`;

exports[`prefer-number-properties > invalid(26): const isPositiveZero = value => value === 0 && 1 / value === Infinity; 2`] = `

Message:
> 1 | const isPositiveZero = value => value === 0 && 1 / value === Infinity;
    |                                                              ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | const isPositiveZero = value => value === 0 && 1 / value === Number.POSITIVE_INFINITY;

`;

exports[`prefer-number-properties > invalid(27): const isNegativeZero = value => value === 0 && 1 / value === -Infinity; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const isNegativeZero = value => value === 0 && 1 / value === -Infinity;

`;

exports[`prefer-number-properties > invalid(27): const isNegativeZero = value => value === 0 && 1 / value === -Infinity; 2`] = `

Message:
> 1 | const isNegativeZero = value => value === 0 && 1 / value === -Infinity;
    |                                                              ^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

Output:
  1 | const isNegativeZero = value => value === 0 && 1 / value === Number.NEGATIVE_INFINITY;

`;

exports[`prefer-number-properties > invalid(28): const {a = NaN} = {}; 1`] = `

Options:
- checkNaN: true

Code:
  1 | const {a = NaN} = {};

`;

exports[`prefer-number-properties > invalid(28): const {a = NaN} = {}; 2`] = `

Message:
> 1 | const {a = NaN} = {};
    |            ^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | const {a = Number.NaN} = {};

`;

exports[`prefer-number-properties > invalid(29): const {[NaN]: a = NaN} = {}; 1`] = `

Options:
- checkNaN: true

Code:
  1 | const {[NaN]: a = NaN} = {};

`;

exports[`prefer-number-properties > invalid(29): const {[NaN]: a = NaN} = {}; 2`] = `

Message:
> 1 | const {[NaN]: a = NaN} = {};
    |         ^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | const {[Number.NaN]: a = NaN} = {};

`;

exports[`prefer-number-properties > invalid(29): const {[NaN]: a = NaN} = {}; 3`] = `

Message:
> 1 | const {[NaN]: a = NaN} = {};
    |                   ^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | const {[NaN]: a = Number.NaN} = {};

`;

exports[`prefer-number-properties > invalid(3): foo[NaN] = 1; 1`] = `

Options:
- checkNaN: true

Code:
  1 | foo[NaN] = 1;

`;

exports[`prefer-number-properties > invalid(3): foo[NaN] = 1; 2`] = `

Message:
> 1 | foo[NaN] = 1;
    |     ^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | foo[Number.NaN] = 1;

`;

exports[`prefer-number-properties > invalid(3): isNaN(foo - 1); 1`] = `

  1 | isNaN(foo - 1);

`;

exports[`prefer-number-properties > invalid(3): isNaN(foo - 1); 2`] = `

Message:
> 1 | isNaN(foo - 1);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Output:
  1 | Number.isNaN(foo - 1);

`;

exports[`prefer-number-properties > invalid(30): const [a = NaN] = []; 1`] = `

Options:
- checkNaN: true

Code:
  1 | const [a = NaN] = [];

`;

exports[`prefer-number-properties > invalid(30): const [a = NaN] = []; 2`] = `

Message:
> 1 | const [a = NaN] = [];
    |            ^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | const [a = Number.NaN] = [];

`;

exports[`prefer-number-properties > invalid(31): function foo({a = NaN}) {} 1`] = `

Options:
- checkNaN: true

Code:
  1 | function foo({a = NaN}) {}

`;

exports[`prefer-number-properties > invalid(31): function foo({a = NaN}) {} 2`] = `

Message:
> 1 | function foo({a = NaN}) {}
    |                   ^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | function foo({a = Number.NaN}) {}

`;

exports[`prefer-number-properties > invalid(32): function foo({[NaN]: a = NaN}) {} 1`] = `

Options:
- checkNaN: true

Code:
  1 | function foo({[NaN]: a = NaN}) {}

`;

exports[`prefer-number-properties > invalid(32): function foo({[NaN]: a = NaN}) {} 2`] = `

Message:
> 1 | function foo({[NaN]: a = NaN}) {}
    |                ^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | function foo({[Number.NaN]: a = NaN}) {}

`;

exports[`prefer-number-properties > invalid(32): function foo({[NaN]: a = NaN}) {} 3`] = `

Message:
> 1 | function foo({[NaN]: a = NaN}) {}
    |                          ^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | function foo({[NaN]: a = Number.NaN}) {}

`;

exports[`prefer-number-properties > invalid(33): function foo([a = NaN]) {} 1`] = `

Options:
- checkNaN: true

Code:
  1 | function foo([a = NaN]) {}

`;

exports[`prefer-number-properties > invalid(33): function foo([a = NaN]) {} 2`] = `

Message:
> 1 | function foo([a = NaN]) {}
    |                   ^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | function foo([a = Number.NaN]) {}

`;

exports[`prefer-number-properties > invalid(34): function foo() {return-Infinity} 1`] = `

Options:
- checkInfinity: true

Code:
  1 | function foo() {return-Infinity}

`;

exports[`prefer-number-properties > invalid(34): function foo() {return-Infinity} 2`] = `

Message:
> 1 | function foo() {return-Infinity}
    |                       ^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

Output:
  1 | function foo() {return Number.NEGATIVE_INFINITY}

`;

exports[`prefer-number-properties > invalid(35): globalThis.isNaN(foo); 1`] = `

  1 | globalThis.isNaN(foo);

`;

exports[`prefer-number-properties > invalid(35): globalThis.isNaN(foo); 2`] = `

Message:
> 1 | globalThis.isNaN(foo);
    | ^^^^^^^^^^^^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Suggestion 1/1: Replace \`isNaN\` with \`Number.isNaN\`.:
  1 | Number.isNaN(foo);

`;

exports[`prefer-number-properties > invalid(36): global.isNaN(foo); 1`] = `

  1 | global.isNaN(foo);

`;

exports[`prefer-number-properties > invalid(36): global.isNaN(foo); 2`] = `

Message:
> 1 | global.isNaN(foo);
    | ^^^^^^^^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Suggestion 1/1: Replace \`isNaN\` with \`Number.isNaN\`.:
  1 | Number.isNaN(foo);

`;

exports[`prefer-number-properties > invalid(37): window.isNaN(foo); 1`] = `

  1 | window.isNaN(foo);

`;

exports[`prefer-number-properties > invalid(37): window.isNaN(foo); 2`] = `

Message:
> 1 | window.isNaN(foo);
    | ^^^^^^^^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Suggestion 1/1: Replace \`isNaN\` with \`Number.isNaN\`.:
  1 | Number.isNaN(foo);

`;

exports[`prefer-number-properties > invalid(38): self.isNaN(foo); 1`] = `

  1 | self.isNaN(foo);

`;

exports[`prefer-number-properties > invalid(38): self.isNaN(foo); 2`] = `

Message:
> 1 | self.isNaN(foo);
    | ^^^^^^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Suggestion 1/1: Replace \`isNaN\` with \`Number.isNaN\`.:
  1 | Number.isNaN(foo);

`;

exports[`prefer-number-properties > invalid(39): globalThis.parseFloat(foo); 1`] = `

  1 | globalThis.parseFloat(foo);

`;

exports[`prefer-number-properties > invalid(39): globalThis.parseFloat(foo); 2`] = `

Message:
> 1 | globalThis.parseFloat(foo);
    | ^^^^^^^^^^^^^^^^^^^^^ Prefer \`Number.parseFloat\` over \`parseFloat\`.

Output:
  1 | Number.parseFloat(foo);

`;

exports[`prefer-number-properties > invalid(4): class A {[NaN](){}} 1`] = `

Options:
- checkNaN: true

Code:
  1 | class A {[NaN](){}}

`;

exports[`prefer-number-properties > invalid(4): class A {[NaN](){}} 2`] = `

Message:
> 1 | class A {[NaN](){}}
    |           ^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | class A {[Number.NaN](){}}

`;

exports[`prefer-number-properties > invalid(4): isNaN(foo * 1); 1`] = `

  1 | isNaN(foo * 1);

`;

exports[`prefer-number-properties > invalid(4): isNaN(foo * 1); 2`] = `

Message:
> 1 | isNaN(foo * 1);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Output:
  1 | Number.isNaN(foo * 1);

`;

exports[`prefer-number-properties > invalid(40): global.parseFloat(foo); 1`] = `

  1 | global.parseFloat(foo);

`;

exports[`prefer-number-properties > invalid(40): global.parseFloat(foo); 2`] = `

Message:
> 1 | global.parseFloat(foo);
    | ^^^^^^^^^^^^^^^^^ Prefer \`Number.parseFloat\` over \`parseFloat\`.

Output:
  1 | Number.parseFloat(foo);

`;

exports[`prefer-number-properties > invalid(41): window.parseFloat(foo); 1`] = `

  1 | window.parseFloat(foo);

`;

exports[`prefer-number-properties > invalid(41): window.parseFloat(foo); 2`] = `

Message:
> 1 | window.parseFloat(foo);
    | ^^^^^^^^^^^^^^^^^ Prefer \`Number.parseFloat\` over \`parseFloat\`.

Output:
  1 | Number.parseFloat(foo);

`;

exports[`prefer-number-properties > invalid(42): self.parseFloat(foo); 1`] = `

  1 | self.parseFloat(foo);

`;

exports[`prefer-number-properties > invalid(42): self.parseFloat(foo); 2`] = `

Message:
> 1 | self.parseFloat(foo);
    | ^^^^^^^^^^^^^^^ Prefer \`Number.parseFloat\` over \`parseFloat\`.

Output:
  1 | Number.parseFloat(foo);

`;

exports[`prefer-number-properties > invalid(43): globalThis.NaN 1`] = `

Options:
- checkNaN: true

Code:
  1 | globalThis.NaN

`;

exports[`prefer-number-properties > invalid(43): globalThis.NaN 2`] = `

Message:
> 1 | globalThis.NaN
    | ^^^^^^^^^^^^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | Number.NaN

`;

exports[`prefer-number-properties > invalid(44): -globalThis.Infinity 1`] = `

Options:
- checkInfinity: true

Code:
  1 | -globalThis.Infinity

`;

exports[`prefer-number-properties > invalid(44): -globalThis.Infinity 2`] = `

Message:
> 1 | -globalThis.Infinity
    | ^^^^^^^^^^^^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

Output:
  1 | Number.NEGATIVE_INFINITY

`;

exports[`prefer-number-properties > invalid(45): const options = {\n\tnormalize: parseFloat,\n\tparseInt,\n};\n\nrun(foo, options); 1`] = `

  1 | const options = {
  2 | 	normalize: parseFloat,
  3 | 	parseInt,
  4 | };
  5 |
  6 | run(foo, options);

`;

exports[`prefer-number-properties > invalid(45): const options = {\n\tnormalize: parseFloat,\n\tparseInt,\n};\n\nrun(foo, options); 2`] = `

Message:
  1 | const options = {
> 2 | 	normalize: parseFloat,
    | 	           ^^^^^^^^^^ Prefer \`Number.parseFloat\` over \`parseFloat\`.
  3 | 	parseInt,
  4 | };
  5 |
  6 | run(foo, options);

Output:
  1 | const options = {
  2 | 	normalize: Number.parseFloat,
  3 | 	parseInt,
  4 | };
  5 |
  6 | run(foo, options);

`;

exports[`prefer-number-properties > invalid(45): const options = {\n\tnormalize: parseFloat,\n\tparseInt,\n};\n\nrun(foo, options); 3`] = `

Message:
  1 | const options = {
  2 | 	normalize: parseFloat,
> 3 | 	parseInt,
    | 	^^^^^^^^ Prefer \`Number.parseInt\` over \`parseInt\`.
  4 | };
  5 |
  6 | run(foo, options);

Output:
  1 | const options = {
  2 | 	normalize: parseFloat,
  3 | 	parseInt: Number.parseInt,
  4 | };
  5 |
  6 | run(foo, options);

`;

exports[`prefer-number-properties > invalid(46): (parseFloat)(\"10.5\"); 1`] = `

  1 | (parseFloat)("10.5");

`;

exports[`prefer-number-properties > invalid(46): (parseFloat)(\"10.5\"); 2`] = `

Message:
> 1 | (parseFloat)("10.5");
    |  ^^^^^^^^^^ Prefer \`Number.parseFloat\` over \`parseFloat\`.

Output:
  1 | (Number.parseFloat)("10.5");

`;

exports[`prefer-number-properties > invalid(47): parseFloat(foo as string); 1`] = `

  1 | parseFloat(foo as string);

`;

exports[`prefer-number-properties > invalid(47): parseFloat(foo as string); 2`] = `

Message:
> 1 | parseFloat(foo as string);
    | ^^^^^^^^^^ Prefer \`Number.parseFloat\` over \`parseFloat\`.

Output:
  1 | Number.parseFloat(foo as string);

`;

exports[`prefer-number-properties > invalid(48): const foo = -/* keep */Infinity; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = -/* keep */Infinity;

`;

exports[`prefer-number-properties > invalid(48): const foo = -/* keep */Infinity; 2`] = `

Message:
> 1 | const foo = -/* keep */Infinity;
    |             ^^^^^^^^^^^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

`;

exports[`prefer-number-properties > invalid(49): const foo = - /* keep */ Infinity; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = - /* keep */ Infinity;

`;

exports[`prefer-number-properties > invalid(49): const foo = - /* keep */ Infinity; 2`] = `

Message:
> 1 | const foo = - /* keep */ Infinity;
    |             ^^^^^^^^^^^^^^^^^^^^^ Prefer \`Number.NEGATIVE_INFINITY\` over \`-Infinity\`.

`;

exports[`prefer-number-properties > invalid(5): foo = {[NaN]: 1} 1`] = `

Options:
- checkNaN: true

Code:
  1 | foo = {[NaN]: 1}

`;

exports[`prefer-number-properties > invalid(5): foo = {[NaN]: 1} 2`] = `

Message:
> 1 | foo = {[NaN]: 1}
    |         ^^^ Prefer \`Number.NaN\` over \`NaN\`.

Output:
  1 | foo = {[Number.NaN]: 1}

`;

exports[`prefer-number-properties > invalid(5): isNaN(foo >>> 0); 1`] = `

  1 | isNaN(foo >>> 0);

`;

exports[`prefer-number-properties > invalid(5): isNaN(foo >>> 0); 2`] = `

Message:
> 1 | isNaN(foo >>> 0);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Output:
  1 | Number.isNaN(foo >>> 0);

`;

exports[`prefer-number-properties > invalid(50): const foo = +/* keep */Infinity; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = +/* keep */Infinity;

`;

exports[`prefer-number-properties > invalid(50): const foo = +/* keep */Infinity; 2`] = `

Message:
> 1 | const foo = +/* keep */Infinity;
    |                        ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | const foo = +/* keep */Number.POSITIVE_INFINITY;

`;

exports[`prefer-number-properties > invalid(6): const foo = Infinity; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = Infinity;

`;

exports[`prefer-number-properties > invalid(6): const foo = Infinity; 2`] = `

Message:
> 1 | const foo = Infinity;
    |             ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | const foo = Number.POSITIVE_INFINITY;

`;

exports[`prefer-number-properties > invalid(6): isNaN(foo.length); 1`] = `

  1 | isNaN(foo.length);

`;

exports[`prefer-number-properties > invalid(6): isNaN(foo.length); 2`] = `

Message:
> 1 | isNaN(foo.length);
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Output:
  1 | Number.isNaN(foo.length);

`;

exports[`prefer-number-properties > invalid(7): if (Number.isNaN(Infinity)) {} 1`] = `

Options:
- checkInfinity: true

Code:
  1 | if (Number.isNaN(Infinity)) {}

`;

exports[`prefer-number-properties > invalid(7): if (Number.isNaN(Infinity)) {} 2`] = `

Message:
> 1 | if (Number.isNaN(Infinity)) {}
    |                  ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | if (Number.isNaN(Number.POSITIVE_INFINITY)) {}

`;

exports[`prefer-number-properties > invalid(7): isNaN(parseFloat(foo)); 1`] = `

  1 | isNaN(parseFloat(foo));

`;

exports[`prefer-number-properties > invalid(7): isNaN(parseFloat(foo)); 2`] = `

Message:
> 1 | isNaN(parseFloat(foo));
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Output:
  1 | Number.isNaN(parseFloat(foo));

`;

exports[`prefer-number-properties > invalid(7): isNaN(parseFloat(foo)); 3`] = `

Message:
> 1 | isNaN(parseFloat(foo));
    |       ^^^^^^^^^^ Prefer \`Number.parseFloat\` over \`parseFloat\`.

Output:
  1 | isNaN(Number.parseFloat(foo));

`;

exports[`prefer-number-properties > invalid(8): if (Object.is(foo, Infinity)) {} 1`] = `

Options:
- checkInfinity: true

Code:
  1 | if (Object.is(foo, Infinity)) {}

`;

exports[`prefer-number-properties > invalid(8): if (Object.is(foo, Infinity)) {} 2`] = `

Message:
> 1 | if (Object.is(foo, Infinity)) {}
    |                    ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | if (Object.is(foo, Number.POSITIVE_INFINITY)) {}

`;

exports[`prefer-number-properties > invalid(8): isNaN(Number(foo)); 1`] = `

  1 | isNaN(Number(foo));

`;

exports[`prefer-number-properties > invalid(8): isNaN(Number(foo)); 2`] = `

Message:
> 1 | isNaN(Number(foo));
    | ^^^^^ Prefer \`Number.isNaN\` over \`isNaN\`.

Output:
  1 | Number.isNaN(Number(foo));

`;

exports[`prefer-number-properties > invalid(9): const foo = bar[Infinity]; 1`] = `

Options:
- checkInfinity: true

Code:
  1 | const foo = bar[Infinity];

`;

exports[`prefer-number-properties > invalid(9): const foo = bar[Infinity]; 2`] = `

Message:
> 1 | const foo = bar[Infinity];
    |                 ^^^^^^^^ Prefer \`Number.POSITIVE_INFINITY\` over \`Infinity\`.

Output:
  1 | const foo = bar[Number.POSITIVE_INFINITY];

`;

exports[`prefer-number-properties > invalid(9): isFinite(Math.floor(foo)); 1`] = `

  1 | isFinite(Math.floor(foo));

`;

exports[`prefer-number-properties > invalid(9): isFinite(Math.floor(foo)); 2`] = `

Message:
> 1 | isFinite(Math.floor(foo));
    | ^^^^^^^^ Prefer \`Number.isFinite\` over \`isFinite\`.

Output:
  1 | Number.isFinite(Math.floor(foo));

`;
